[gd_scene load_steps=11 format=3 uid="uid://di8llcs8spafb"]

[ext_resource type="Script" path="res://scripts/WorldBehavior.gd" id="1_o1wi6"]
[ext_resource type="PackedScene" uid="uid://c4gnsl2iewwhq" path="res://level/level_control.tscn" id="2_nk3bh"]
[ext_resource type="PackedScene" uid="uid://xa8w8eqdqh13" path="res://mobs/player.tscn" id="3_oi2d8"]
[ext_resource type="Script" path="res://scripts/UIBehavior.gd" id="3_u1ff7"]
[ext_resource type="Script" path="res://scripts/TurnManager.gd" id="4_l0k3p"]
[ext_resource type="Script" path="res://scripts/Mobs/MobManager.gd" id="5_ayikj"]
[ext_resource type="Environment" uid="uid://cjvxos8g1gtm4" path="res://level/world_enviroment.tres" id="8_rwdgm"]
[ext_resource type="Script" path="res://scripts/PlayerUI.gd" id="9_yiq0f"]
[ext_resource type="Script" path="res://scripts/UI/PlayerMenuUI.gd" id="10_a3c3k"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ykotq"]
dof_blur_far_enabled = true

[node name="GameControl" type="Node3D" node_paths=PackedStringArray("player", "UIControl", "mob_manager")]
script = ExtResource("1_o1wi6")
player = NodePath("CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport/MobManager/Player")
UIControl = NodePath("CanvasLayer/AspectRatioContainer/UIBehavior")
mob_manager = NodePath("CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport/MobManager")

[node name="TurnManager" type="Node" parent="." node_paths=PackedStringArray("player_ui")]
script = ExtResource("4_l0k3p")
player_ui = NodePath("../CanvasLayer/AspectRatioContainer/UIBehavior")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 904.0
offset_bottom = 552.0

[node name="UIBehavior" type="Control" parent="CanvasLayer/AspectRatioContainer" node_paths=PackedStringArray("game_viewport", "console_output", "player")]
layout_mode = 2
script = ExtResource("3_u1ff7")
game_viewport = NodePath("../SubViewportContainer2/SubViewport")
console_output = NodePath("ConsoleOutput")
player = NodePath("../SubViewportContainer2/SubViewport/MobManager/Player")

[node name="ConsoleOutput" type="RichTextLabel" parent="CanvasLayer/AspectRatioContainer/UIBehavior"]
layout_mode = 2
offset_left = 728.0
offset_right = 1088.0
offset_bottom = 544.0
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 0
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 13
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 13
theme_override_font_sizes/mono_font_size = 12
bbcode_enabled = true
text = "aaa
aaaa
aaaa
aaaa
aaaa
aaaa
aaaa
i like big butts and i 
cannot
lie"
scroll_following = true

[node name="PlayerUI" type="Control" parent="CanvasLayer/AspectRatioContainer/UIBehavior"]
anchors_preset = 0
offset_top = 544.0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("9_yiq0f")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = 8.0
offset_right = -200.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Name: Boo"

[node name="RaceLabel" type="Label" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Race: Human"

[node name="DirLabel" type="Label" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer/VBoxContainer2"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Turn: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer"]
layout_mode = 2

[node name="Stats Label" type="Label" parent="CanvasLayer/AspectRatioContainer/UIBehavior/PlayerUI/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Str: 0
Dex: 0
Con: 0
Int: 0
Wis: 0
Cha: 0"

[node name="SubViewportContainer2" type="SubViewportContainer" parent="CanvasLayer/AspectRatioContainer"]
clip_contents = true
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/AspectRatioContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(896, 544)
render_target_update_mode = 4

[node name="MobManager" type="Node" parent="CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport"]
script = ExtResource("5_ayikj")

[node name="Player" parent="CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport/MobManager" instance=ExtResource("3_oi2d8")]
top_level = true

[node name="LevelControl" parent="CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport" instance=ExtResource("2_nk3bh")]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="CanvasLayer/AspectRatioContainer/SubViewportContainer2/SubViewport"]
environment = ExtResource("8_rwdgm")
camera_attributes = SubResource("CameraAttributesPractical_ykotq")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
z_index = 999
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlayerMenuUI" type="PanelContainer" parent="CanvasLayer" node_paths=PackedStringArray("ui_manager", "menu_tab", "player", "player_inventory_container")]
unique_name_in_owner = true
visible = false
offset_right = 1280.0
offset_bottom = 544.0
script = ExtResource("10_a3c3k")
ui_manager = NodePath("../AspectRatioContainer/UIBehavior")
menu_tab = NodePath("Panel/PanelContainer/TabContainer")
player = NodePath("../AspectRatioContainer/SubViewportContainer2/SubViewport/MobManager/Player")
player_inventory_container = NodePath("Panel/PanelContainer/TabContainer/Inventory/Panel/VScrollBar/player_inventory")

[node name="Panel" type="Panel" parent="CanvasLayer/PlayerMenuUI"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PlayerMenuUI/Panel"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer"]
layout_mode = 2
tabs_visible = false

[node name="Inventory" type="Control" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Inventory"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 1224.0
offset_bottom = 625.0

[node name="VScrollBar" type="ScrollContainer" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Inventory/Panel"]
layout_mode = 0
offset_right = 1232.0
offset_bottom = 616.0

[node name="player_inventory" type="VBoxContainer" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Inventory/Panel/VScrollBar"]
layout_mode = 2

[node name="PlayerWeightLabel" type="RichTextLabel" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Inventory/Panel"]
layout_mode = 0
offset_left = 1136.0
offset_top = 624.0
offset_right = 1232.0
offset_bottom = 656.0
text = "Weight: 0.0"

[node name="Stats" type="Control" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Stats"]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 1240.0
offset_bottom = 656.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer/Stats/Panel2"]
layout_mode = 0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 208.0
bbcode_enabled = true
text = "Name: Boo
Race: Human
Class: Giga-Nerd"
fit_content = true
scroll_active = false

[node name="ClosePlayerMenu" type="Button" parent="CanvasLayer/PlayerMenuUI/Panel/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="tab_changed" from="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/TabContainer" to="CanvasLayer/PlayerMenuUI" method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="CanvasLayer/PlayerMenuUI/Panel/PanelContainer/ClosePlayerMenu" to="CanvasLayer/AspectRatioContainer/UIBehavior" method="_on_close_player_menu_pressed"]
